fixed spacing added transition style to hoover and button

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -59,6 +59,7 @@
 
 .footer__social-link:hover {
   color: #c1c1c1;
+  transition: opacity 0.3s ease;
 }
 
 .footer__copyright {
